--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <title> the perfect master's project <3 </title>
     <style>
         body {
-            font-family: Courier, monospace;
+            font-family: 'Courier', monospace;
             text-align: center;
-            margin-top: 300px;
+            margin-top: 10vh;
+            background-color: #f3f3f3;
+            color: #333;
+        }
+        #main-container {
+            width: 80%;
+            margin: auto;
+            background-color: #fff;
+            padding: 2rem;
+            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1 {
+            font-size: 3rem;
+            color: #d6001c;
+        }
+        button {
+            background-color: #d6001c;
+            border: none;
+            padding: 1rem 2rem;
+            font-size: 1rem;
+            color: white;
+            text-transform: uppercase;
+            cursor: pointer;
+            margin-top: 2rem;
+            transition: background-color 0.3s ease;
+            border-radius: 4px;
+            font-weight: bold;
+        }
+        button:hover {
+            background-color: #a50015;
         }
         #sentence {
-            margin-top: 20px;
-            font-size: 20px;
+            font-size: 1.25rem;
+            margin-top: 1.5rem;
+            padding: 1rem;
+            background-color: #eaeaea;
+            border-radius: 4px;
         }      
     </style>
 </head>
